all facility ddl

--- a/views/header.html
+++ b/views/header.html
@@ -20,14 +20,14 @@
 		<ul class="nav-right list-inline headmenu">
 			<!-- <li><a ui-sref="app.admin.dashboard"><span>Home</span></a></li> -->
 			<li class="dropdown" uib-dropdown>
-				<span class="dropdown-toggle" uib-dropdown-toggle>Facilities &nbsp; <fa name="angle-down"></fa> </span>
+				<span class="dropdown-toggle" uib-dropdown-toggle>{{current_facility}} &nbsp; <fa name="angle-down"></fa> </span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
-					<li><a ui-sref="app.admin.dashboard">All Facilities</a></li>
-					<li ng-repeat="facility in headerFacilityList"><a ui-sref="app.admin.dashboardfacility({facility_id:facility.facility_id})">{{ facility.facility_name }}</a></li>
+					<li><a ui-sref="app.admin.dashboard" ng-click="setCurrentFacility(staticcurrent_facility)">All Facilities</a></li>
+					<li ng-repeat="facility in headerFacilityList"><a ui-sref="app.admin.dashboardfacility({facility_id:facility.facility_id})" ng-click="setCurrentFacility(facility.facility_name)">{{ facility.facility_name }}</a></li>
 				</ul>
 			</li>
 			<li class="dropdown" uib-dropdown>
-				<span class="dropdown-toggle" ui-sref="app.admin.facility.facility" uib-dropdown-toggle>Facility </span>
+				<span class="dropdown-toggle" ui-sref="app.admin.facility.facility" uib-dropdown-toggle>Facilities </span>
 			</li>
 			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" uib-dropdown-toggle>Devices &nbsp;<fa name="angle-down"></fa></span>
