--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -81,7 +81,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Technician <span class="text-danger">*</span></label><br/>
-														<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.technician_id"
+														<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_first_name for item in technicianList track by item.technician_id"
 														 ng-model="device.technician_id" required>
 															<option value="">Select</option>
 														</select>
