--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -203,15 +203,16 @@
 									{{result}}
 								</div>
 							</div>
+
+							<div class="btn-toolbar" role="toolbar" aria-label="...">
+								<div class="btn-group btn-group-xs" role="group" aria-label="...">
+									<button md-button style="min-width:15px" ng-repeat="x in alphabateList" ng-click="searchByAlphabet(x)" ng-class="(x=='All' && searchAlphabet=='')?'md-raised':(searchAlphabet==x?'md-raised':'')">{{x}}</button>
+								</div>
+							</div>
 							<div ng-if="data.length == 0">
 								<div layout="row" class="error" ng-class="statusclass">
 									<!--{{status}}-->
 									No Record Found
-								</div>
-							</div>
-							<div class="btn-toolbar" role="toolbar" aria-label="...">
-								<div class="btn-group btn-group-xs" role="group" aria-label="...">
-									<button md-button style="min-width:15px" ng-repeat="x in alphabateList" ng-click="searchByAlphabet(x)">{{x}}</button>
 								</div>
 							</div>
 							<div ng-class="class" ng-cloak>
