--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -36,7 +36,9 @@
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-40">
 								<div class="col-sm-3 col-md-3 filterorder">
-
+									<div class="btn-group pull-left">
+										<button class="list-icon" ng-click="refreshList()"><i class="fa fa-refresh"></i></button>
+									</div>
 								</div>
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
