--- a/views/tmpl/admin/door/door-groups.html
+++ b/views/tmpl/admin/door/door-groups.html
@@ -1,179 +1,3 @@
-<<<<<<< HEAD
-<div class="page page-users">
-	<div class="pageheader backpage">		
-		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
-		<div class="facility-view elika-facility-name"></div>
-	</div>
-	
-	<div class="pagecontent">
-		<div class="row">		
-			<div class="dnone card-container col-sm-3 col-md-3">
-				<div class="card">
-					<div class="bg-dashboard">
-						<div class="bg-transparent doorsbg">
-							<div class="row">
-								<div class="col-md-12">
-									<h3 class="custom-font">{{page.title}}</h3>
-									<p>{{page.subtitle}}</p>									
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>			
-			<div class="card-container col-sm-4 col-md-3">
-				<div class="card">
-					<a ui-sref="app.admin.device.devices">
-					<div class="noback bg-blue cardheight">						
-						<div class="row">
-							<div class="col-xs-6 ta-r">
-								<div class="iconbx">
-									<img src="images/device-icon.png" alt="">
-								</div>
-							</div>
-							<div class="col-xs-6">	
-								<div class="itxt">							
-									<p class="text-elg text-strong mt-5 mb-5">22</p>
-									<span class="text-lg">Devices</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					</a>
-				</div>
-			</div>			
-			<div class="card-container col-sm-4 col-md-3">
-				<div class="card">
-					<a ui-sref="app.admin.door.doors">
-					<div class="noback bg-slategray lt cardheight">						
-						<div class="row">
-							<div class="col-xs-6 ta-r">
-								<div class="iconbx">
-									<img src="images/doors-icon.png" alt="">
-								</div>
-							</div>
-							<div class="col-xs-6">	
-								<div class="itxt">							
-									<p class="text-elg text-strong mt-5 mb-5">22</p>
-									<span class="text-lg">Doors</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					</a>
-				</div>
-			</div>			
-			<div class="card-container col-sm-4 col-md-3">
-				<div class="card">
-					<a ui-sref="app.admin.user.users">
-					<div class="noback bg-lightred cardheight">						
-						<div class="row">
-							<div class="col-xs-6 ta-r">
-								<div class="iconbx">
-									<img src="images/users-icon.png" alt="">
-								</div>
-							</div>
-							<div class="col-xs-6">
-								<div class="itxt">								
-									<p class="text-elg text-strong mt-5 mb-5">45</p>
-									<span class="text-lg">Users</span>
-								</div>	
-							</div>
-						</div>
-					</div>
-					</a>
-				</div>
-			</div>			
-		</div>
-		
-		<div class="row" >
-			<div class="col-md-12">
-				<section class="tile box-shadow" fullscreen="isFullscreen06">
-					<div class="tile-header dvd dvd-btm">
-						<h1 class="custom-font"><strong>{{page.title}}</strong></h1>
-						<ul class="controls">
-							<li class="addpopup">
-								<div ng-controller="ModalDemoCtrl">
-									<script type="text/ng-template" id="myModalContent.html">
-										<form name="create_doorGroup" ng-validate="validationOptions" role="form" ng-submit="createDoorGroup(doorGrp,create_doorGroup)">
-											<div class="modal-header"><h4 class="modal-title custom-font">Create Door Groups</h4></div>
-											<div class="modal-body">						
-												<div class="row">
-													<div class="form-group col-md-6">
-														<label for="">Group Name</label>
-														<input type="text" name="" id="" class="form-control" placeholder="" ng-model="doorGrp.name">
-													</div>
-													<div class="form-group col-md-6">
-														<label for="">Facility</label><br/>														
-														<select name="mySelect" id="mySelect" class="form-control" chosen="{width: '100%'}"													
-														ng-options="item.facility_id as item.facility_name for item in facilityList"
-														ng-model="doorGrp.facility_id" ng-init="doorGrp.facility_id = facilityId"></select>
-													</div>
-												</div>
-												<div class="form-group">
-													<label for="">Doors</label>
-													<select name="mySelect" id="mySelect" class="form-control" Multiple chosen="{width: '100%'}"													
-													ng-options="door.door_id as door.door_name for door in doorList"
-													
-													ng-model="doorGrp.door_id" ng-init="doorGrp.door_id = doorid"
-													></select>
-													<small class="pull-right mb-10"><a ng-click="cancel()" ui-sref="app.admin.door.doors">Add Door</a></small>
-												</div>
-												<div class="row" style="display:none;">
-													<div class="form-group col-sm-6 col-md-6 first">
-														<label for="">Door Status <span class="text-danger">*</span></label><br/>
-														<div class="btn-group btnrounded" ng-init="doorGrp.status = 1">
-															<label class="btn btn-default" ng-model="doorGrp.status" uib-btn-radio="1">Active</label>
-															<label class="btn btn-default" ng-model="doorGrp.status" uib-btn-radio="0">Inactive</label>
-														</div>
-													</div>
-												</div>
-											</div>
-											<div class="modal-footer">
-												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c door_close"  id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
-												<button type="submit"  class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
-											</div>
-										</form>
-									</script>
-									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Door Groups</span></a>
-								</div>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="hometabs">
-						<div class="tile-body table-custom">							
-							<div ng-if="result">									
-								<div layout="row" ng-class="statusclass">									
-									{{result}}
-								</div>
-							</div>
-							<div ng-class="class">
-								<div class="glview">
-									<md-content>			
-										<md-card ng-repeat="doorgroup in doorgroups track by doorgroup.doorgroup_id">
-											<md-card-content>
-												<h2 class="md-title mt-40">{{ doorgroup.doorgroup_name }}</h2>
-												<p>No of doors: {{ doorgroup.doorgroup_door_count }}</p>
-												<p class="mb-20">{{doorgroup.facility_name}}</p>
-											</md-card-content>
-											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.door.view-door-groups({doorgroup_id:doorgroup.doorgroup_id, type:'view'})">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.door.edit-door-groups({doorgroup_id:doorgroup.doorgroup_id, type:'edit'})">Edit</a>
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event,doorgroup.doorgroup_id)">Delete</a>
-											</div>
-										</md-card>										
-									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
-			</div>
-		</div>
-	</div>
-=======
 <div class="page page-users">
 	<div class="pageheader backpage">
 		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
@@ -375,8 +199,7 @@
 											</div>
 										</md-card>
 									</md-content>
-									<button ng-if="count>20 && doorgroups.length
-											<count " class="btn btn-success btn-border btn-rounded
+									<button ng-if="count>20 && doorgroups.length<count " class="btn btn-success btn-border btn-rounded
 											 m-0-auto f-wm " ng-click="getDoorsList() " ng-style="lmbtn ">Load more</button>
 								</div>
 							</div>
@@ -386,5 +209,4 @@
 			</div>
 		</div>
 	</div>
->>>>>>> 52103aef9b14ff43de3aec7ba0c218b62e150764
 </div>
