--- a/views/tmpl/admin/door/door-groups.html
+++ b/views/tmpl/admin/door/door-groups.html
@@ -154,15 +154,15 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-sm-3 col-md-3 ">
-									<div class="gridlistbar ta-r pull-right ">
+								<!--<div class="col-sm-3 col-md-3 ">
+									<div class="ta-r pull-right ">
 										<label class="control-label ">View by</label>
 										<a href=" " class="list-icon " ng-class="{active: layout=='list' } " ng-click="changeClass() "><i class="fa fa-th-list
 											 " aria-hidden="true "></i></a>
 										<a href=" " class="grid-icon " ng-class="{active: layout=='grid' } " ng-click="changeaClass() "><i class="fa
 											 fa-th " aria-hidden="true "></i></a>
 									</div>
-								</div>
+								</div>-->
 							</div>
 							<div ng-if="result ">
 								<div layout="row " ng-class="statusclass ">
