--- a/views/header.html
+++ b/views/header.html
@@ -1,6 +1,6 @@
 <header class="clearfix">
 	<div class="branding">
-		<a class="brand" ui-sref="app.admin.dashboard">
+		<a class="brand" ui-sref="app.admin.dashboard({facility_id:facility_id})">
 			<span><strong>Elika</strong> Access Systems</span>
 		</a>
 	</div>
@@ -13,25 +13,25 @@
 	
 	<div class="topmenu pull-left">
 		<div class="branding">
-			<a class="brand" ui-sref="app.admin.dashboard">
+			<a class="brand" ui-sref="app.admin.dashboard({facility_id:facility_id})">
 				<span><strong>Elika</strong> Access System</span>
 			</a>
 		</div>
 		<ul class="nav-right list-inline headmenu">
 			<!-- <li><a ui-sref="app.admin.dashboard"><span>Home</span></a></li> -->
-			<li class="dropdown" uib-dropdown>
-				<span class="dropdown-toggle" uib-dropdown-toggle>{{current_facility}} &nbsp; <fa name="angle-down"></fa> </span>
+			<li ng-if="navbar_facilities_count > 1" class="dropdown" uib-dropdown>
+				<span class="dropdown-toggle" uib-dropdown-toggle>{{current_facility}} {{navbar_facilities_count}} &nbsp; <fa name="angle-down"></fa> </span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<!-- <li><a ui-sref="app.admin.dashboard" ng-click="setCurrentFacility(staticcurrent_facility)">Home Dashboard</a></li> 
 					ui-sref="app.admin.dashboardfacility({facility_id:facility.facility_id})"
 					-->
-					<li ><a ui-sref="app.admin.facility.facility" ng-click="goFacilityList()">Facilites List</a></li>
+					<li ><a ng-click="goFacilityList()">All Facilities</a></li>
 					<li ng-repeat="facility in headerFacilityList"><a ng-click="setCurrentFacility(facility.facility_name,facility.facility_id)">{{ facility.facility_name }}</a></li>
 				</ul>
 			</li>
-			<!-- <li class="dropdown" uib-dropdown>
+			<li ng-if="navbar_facilities_count == 1" class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" ui-sref="app.admin.facility.facility" uib-dropdown-toggle>Facilities </span>
-			</li> -->
+			</li>
 			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" uib-dropdown-toggle>Devices &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
