--- a/views/tmpl/admin/device/device-settings.html
+++ b/views/tmpl/admin/device/device-settings.html
@@ -79,12 +79,13 @@
 																	<div class="col-sm-2 pr-0">
 																		<label for="address1">Strike Time {{$index + 1}}</label>
 																		<input type="text" class="form-control" ng-model="relay.strike_time" id="address1" value="1000">
-																		<span class="error" ng-if="parseInt(relay.strike_time)>4500 || parseInt(relay.strike_time)<500">{{GenericError}}</span>
+																		<span class="error"  ng-if="parseInt(relay.strike_time)>4500 || parseInt(relay.strike_time)<500">{{GenericError}}</span>
 																	</div>
 																	<div class="col-sm-3 pr-0">
 																		<label for="">Door</label><br/>
-																		<select class="form-control" ng-model="relay.drd_door_id" ng-options="x.door_id as x.door_name disable when getAvailablity(x.door_id,relay.drd_id,relayNDoorGenSetting) for x in doorListAdvanceSetting track by x.door_id">
-																			<option value="" disabled>Select Door</option>
+																		<select class="form-control" ng-model="relay.drd_door_id">
+																			<option value="">Select Door</option>
+																			<option ng-repeat="x in doorListAdvanceSetting track by x.door_id" name="{{x.door_id+'_'+relay.drd_id}}"  ng-value="x.door_id" ng-disabled="getAvailablity(x.door_id,relay.drd_id,relayNDoorGenSetting)" aria-disabled="{{getAvailablity(x.door_id,relay.drd_id,relayNDoorGenSetting)}}">{{x.door_name}}</option>
 																		</select>
 																	</div>
 																	<div class="col-sm-6 pr-0" ng-controller="ActivebtnCtrl">
