--- a/elika-warehouse/views/tmpl/administrator/master-admin.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin.html
@@ -165,7 +165,7 @@
 													</div>
 												</form>		
 											</script>
-											<span class="group-span-filestyle input-group-btn"><label ng-click="open()" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+											<!-- <span class="group-span-filestyle input-group-btn"><label ng-click="open()" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span> -->
 										</div>
 									</div>
 								</div>
